--- a/doc/callers.org
+++ b/doc/callers.org
@@ -46,19 +46,29 @@ The Callers plug-in
 ** TODO Implementation [0/3]
    Describe the internals of the plug-in
 *** TODO architecture of the plugin
+*** big pictures [/]
 **** big picture of clang, callers and frama-C++ plugins		:all:
     #+BEGIN_SRC dot :tangle callers.frama-c++.launcher.gen.dot
-digraph "Callers integration with Clang/LLVM " 
+digraph "Integration of Frama-C++ and Callers into the Clang/LLVM build & analysis process"
 {
+// title
+labelloc="b"
+label="Integration of Frama-C++ and Callers into the Clang/LLVM build & analysis process"
 
 "scan-build" [ label="clang scan-build" ]
 "scan-callers" [ label="STANCE scan-callers\nbash script", color=green ]
 "cmake-callers" [ label="STANCE cmake-callers\nbash script", color=green ]
 "scan-callers" -> "scan-build" [ label="extends", color=green ]
+"scan-callers" -> "build commands" [ dir=back, color=green ]
 
 // user build
 "user build" [ label="custom build\n(autoconf, cmake..)" ]
+"build commands" [ label="build commands", shape=box ]
+"user build" -> "build commands"
+
+// scan build
 "scan-build" -> "user build"
+"scan-build" -> "build commands" [ dir=back ]
 
 // compilation
 "object code" [ shape="box" ]
@@ -66,14 +76,14 @@ digraph "Callers integration with Clang/LLVM "
 // c compilation
 "c code" [ label="C code", shape="box" ]
 "c compiler" [ label="C compiler\n(gcc, clang..)" ]
-"user build" -> "c compiler"
+"build commands" -> "c compiler"
 "c compiler" -> "c code" [ dir=back ]
 "c compiler" -> "object code"
 
 // c++ compilation
 "cpp code" [ label="C++ code", shape="box" ]
 "cpp compiler" [ label="C++ compiler\n(g++,clang++..)" ]
-"user build" -> "cpp compiler"
+"build commands" -> "cpp compiler"
 "cpp compiler" -> "cpp code" [ dir=back ]
 "cpp compiler" -> "object code"
 
@@ -92,7 +102,8 @@ digraph "Callers integration with Clang/LLVM "
 
 // clang compilation
 "clang object code" [ label="Clang/LLVM object code", shape="box" ]
-"llvm" [ label="LLVM Optimizer\n& Code Generator" ]
+"llvm" [ label="LLVM" ]
+//"llvm" [ label="LLVM Optimizer\n& Code Generator" ]
 "llvm" -> "clang object code"
 
 // clang compilation of C code
@@ -189,15 +200,15 @@ digraph "Callers integration with Clang/LLVM "
 "cmake-callers" -> "fc security plugins" [ color="blue" ]
 "fc security plugins" [ label="STANCE frama-c\nsecurity plugins", color=blue ]
 "fc security plugins" -> "VA" [ color=blue ]
-"fc security plugins" -> "VA_results" [ dir=back, color=blue ]
+"fc security plugins" -> "VA results" [ dir=back, color=blue ]
 
 // frama-c value analysis
-"VA_results" [ shape=box ]
+"VA results" [ shape=box ]
 "VA" [ label="Value Analysis" ]
-"VA_results" [ label="VA results" ]
+"VA results" [ label="VA results" ]
 "VA" -> "frama-c" [ dir=back ]
-//"VA" -> "VA_results"
-"VA_results" -> "VA" [ dir=back ]
+//"VA" -> "VA results"
+"VA results" -> "VA" [ dir=back ]
 "VA" -> "cil" [ dir=back ]
 
 // frama-c analysis
@@ -217,10 +228,14 @@ digraph "Callers integration with Clang/LLVM "
 // End:
  
    #+END_SRC
-**** use of the Callers plugin with the cmake build	     :analysis:cmake:
+**** use of the Callers plugin with the cmake build  :analysis:callers:cmake:
     #+BEGIN_SRC dot :tangle callers.cmake.gen.dot
-digraph "Callers integration with Clang/LLVM " 
+digraph "Use of the Callers plugin with the cmake build"
 {
+// title
+labelloc="b"
+label="Use of the Callers plugin with the cmake build"
+
 "cmake-callers" [ label="STANCE cmake-callers\nbash script", color=green ]
 
 // compilation
@@ -243,7 +258,8 @@ digraph "Callers integration with Clang/LLVM "
 "compile_commands" [ label="compile_commands.json", shape=box ]
 "cmake build" -> "cpp compiler"
 "cmake build" -> "c compiler"
-"cmake build" -> "compile_commands"
+//"cmake build" -> "compile_commands"
+"compile_commands" -> "cmake build" [ dir=back ]
 
 "cmake-callers" -> "compile_commands" [ dir=back, color=green ]
 
@@ -308,20 +324,29 @@ digraph "Callers integration with Clang/LLVM "
 // compile-command: "dot -Tpng callers.cmake.gen.dot > callers.cmake.gen.png"
 // End:
    #+END_SRC
-**** use of the Callers plugin with a custom build	      :analysis:scan:
+**** use of the Callers plugin with a custom build    :analysis:callers:scan:
     #+BEGIN_SRC dot :tangle callers.scan.gen.dot
 digraph "scan-callers" 
 {
+// title
+labelloc="b"
+label="Use of the Callers plugin with a custom build"
 
 "scan-build" [ label="clang scan-build" ]
 "scan-callers" [ label="STANCE scan-callers\nbash script", color=green ]
 "scan-callers" -> "scan-build" [ label="extends", color=green ]
 "scan-callers" -> "callers frontend" [ color=green ]
 "scan-callers" -> "callers++ frontend" [ color=green ]
+"scan-callers" -> "build commands" [ dir=back, color=green ]
 
 // user build
 "user build" [ label="custom build\n(autoconf, cmake..)" ]
+"build commands" [ label="build commands", shape=box ]
+"user build" -> "build commands"
+
+// scan build
 "scan-build" -> "user build"
+"scan-build" -> "build commands" [ dir=back ]
 
 // compilation
 "object code" [ shape="box" ]
@@ -329,14 +354,14 @@ digraph "scan-callers"
 // c compilation
 "c code" [ label="C code", shape="box" ]
 "c compiler" [ label="C compiler\n(gcc, clang..)" ]
-"user build" -> "c compiler"
+"build commands" -> "c compiler"
 "c compiler" -> "c code" [ dir=back ]
 "c compiler" -> "object code"
 
 // c++ compilation
 "cpp code" [ label="C++ code", shape="box" ]
 "cpp compiler" [ label="C++ compiler\n(g++,clang++..)" ]
-"user build" -> "cpp compiler"
+"build commands" -> "cpp compiler"
 "cpp compiler" -> "cpp code" [ dir=back ]
 "cpp compiler" -> "object code"
 
@@ -412,8 +437,14 @@ digraph "scan-callers"
     #+BEGIN_SRC dot :tangle build.custom.gen.dot
 digraph "custom build " 
 {
+// title
+labelloc="b"
+label="user custom build process"
+
 // user build
 "user build" [ label="custom build\n(autoconf, cmake..)" ]
+"build commands" [ label="build commands", shape=box ]
+"user build" -> "build commands"
 
 // compilation
 "object code" [ shape="box" ]
@@ -421,14 +452,14 @@ digraph "custom build "
 // c compilation
 "c code" [ label="C code", shape="box" ]
 "c compiler" [ label="C compiler\n(gcc, clang..)" ]
-"user build" -> "c compiler"
+"build commands" -> "c compiler"
 "c compiler" -> "c code" [ dir=back ]
 "c compiler" -> "object code"
 
 // c++ compilation
 "cpp code" [ label="C++ code", shape="box" ]
 "cpp compiler" [ label="C++ compiler\n(g++,clang++..)" ]
-"user build" -> "cpp compiler"
+"build commands" -> "cpp compiler"
 "cpp compiler" -> "cpp code" [ dir=back ]
 "cpp compiler" -> "object code"
 }
@@ -442,6 +473,10 @@ digraph "custom build "
     #+BEGIN_SRC dot :tangle build.cmake.gen.dot
 digraph "cmake build" 
 {
+// title
+labelloc="b"
+label="cmake build process"
+
 // compilation
 "object code" [ shape="box" ]
 
@@ -473,6 +508,10 @@ digraph "cmake build"
     #+BEGIN_SRC dot :tangle build.clang.gen.dot
 digraph "clang build" 
 {
+// title
+labelloc="b"
+label="clang build process"
+
 "scan-build" [ label="clang scan-build" ]
 
 "c code" [ label="C code", shape="box" ]
@@ -512,6 +551,272 @@ digraph "clang build"
 // End:
  
    #+END_SRC
+**** clang analysis process				     :analysis:clang:
+    #+BEGIN_SRC dot :tangle analysis.clang.gen.dot
+digraph "clang analysis process" 
+{
+// title
+labelloc="b"
+label="clang analysis process"
+
+"scan-build" [ label="clang scan-build" ]
+
+// user build
+"user build" [ label="custom build\n(autoconf, cmake..)" ]
+"build commands" [ label="build commands", shape=box ]
+"user build" -> "build commands"
+
+// scan build
+"scan-build" -> "user build"
+"scan-build" -> "build commands" [ dir=back ]
+
+// c compilation
+"c code" [ label="C code", shape="box" ]
+
+// c++ compilation
+"cpp code" [ label="C++ code", shape="box" ]
+
+// clang compilation of C code
+"clang AST" [ shape=box ]
+"clang frontend" [ label="Clang frontend" ]
+"clang frontend" -> "c code" [ dir=back ]
+//"clang frontend" -> "clang AST"
+"clang AST" -> "clang frontend" [ dir=back ]
+
+// clang++ compilation of C++ code
+"clang++ frontend" [ label="Clang++ frontend" ]
+"clang++ frontend" -> "cpp code" [ dir=back ]
+"clang AST" -> "clang++ frontend" [ dir=back ]
+
+// clang analysis
+"analysis results" [ label="clang analysis results, " shape="box" ]
+"scan-build" -> "clang static analyzer"
+"clang static analyzer" -> "clang checkers"
+"clang checkers" -> "analysis results"
+"clang checkers" -> "clang AST" [ dir=back ]
+
+// clang C code analysis
+"clang static analyzer" -> "clang frontend"
+
+// clang C++ code analysis
+"clang static analyzer" -> "clang++ frontend"
+
+// user analysis goals & config
+"user config" -> "scan-build"
+"analysis goals" [ label="analysis goals", shape=box ]
+"user config" [ label="user config", shape=box ]
+"analysis goals" -> "user config" [ style=dashed, label=manual ]
+"analysis goals" -> "analysis results" [ style=dashed, label="manual", dir=back ]
+}
+
+// Local Variables:
+// compile-command: "dot -Tpng analysis.clang.gen.dot > analysis.clang.gen.png"
+// End:
+ 
+   #+END_SRC
+**** frama-c value analysis process		  :frama:c:VA:value:analysis:
+    #+BEGIN_SRC dot :tangle analysis.frama-c.gen.dot
+digraph "Frama-C Value Analysis process"
+{
+// title
+labelloc="b"
+label="Frama-C Value Analysis process"
+
+// "scan-build" [ label="clang scan-build" ]
+// "scan-callers" [ label="STANCE scan-callers\nbash script", color=green ]
+// "cmake-callers" [ label="STANCE cmake-callers\nbash script", color=green ]
+// "scan-callers" -> "scan-build" [ label="extends", color=green ]
+// "scan-callers" -> "build commands" [ dir=back, color=green ]
+
+// // user build
+// "user build" [ label="custom build\n(autoconf, cmake..)" ]
+// "build commands" [ label="build commands", shape=box ]
+// "user build" -> "build commands"
+
+// // scan build
+// "scan-build" -> "user build"
+// "scan-build" -> "build commands" [ dir=back ]
+
+// // compilation
+// "object code" [ shape="box" ]
+
+// // c compilation
+
+// "c compiler" [ label="C compiler\n(gcc, clang..)" ]
+// "build commands" -> "c compiler"
+// "c compiler" -> "c code" [ dir=back ]
+// "c compiler" -> "object code"
+
+// // c++ compilation
+// "cpp code" [ label="C++ code", shape="box" ]
+// "cpp compiler" [ label="C++ compiler\n(g++,clang++..)" ]
+// "build commands" -> "cpp compiler"
+// "cpp compiler" -> "cpp code" [ dir=back ]
+// "cpp compiler" -> "object code"
+
+// // cmake build
+// "cmake-callers" -> "cmake build" [ color=green ]
+// "compile_commands" [ label="compile_commands.json", shape=box ]
+// "cmake build" -> "cpp compiler"
+// "cmake build" -> "c compiler"
+// "cmake build" -> "compile_commands"
+
+// "cmake-callers" -> "compile_commands" [ dir=back, color=green ]
+
+// // cmake callers analysis
+// "cmake-callers" -> "callers frontend" [ color=green ]
+// "cmake-callers" -> "callers++ frontend" [ color=green ]
+
+// // clang compilation
+// "clang object code" [ label="Clang/LLVM object code", shape="box" ]
+// "llvm" [ label="LLVM" ]
+// //"llvm" [ label="LLVM Optimizer\n& Code Generator" ]
+// "llvm" -> "clang object code"
+
+// // clang compilation of C code
+// "clang compiler" [ label="Clang compiler" ]
+// "clang AST" [ shape=box ]
+// "scan-build" -> "clang compiler"
+// "clang frontend" [ label="Clang frontend" ]
+// "clang frontend" -> "c code" [ dir=back ]
+// //"clang frontend" -> "clang AST"
+// "clang AST" -> "clang frontend" [ dir=back ]
+// "clang compiler" -> "clang frontend"
+// "clang compiler" -> "clang AST"  [ dir=back ]
+// "clang compiler" -> "llvm"
+
+// // clang++ compilation of C++ code
+// "clang++ compiler" [ label="Clang++ compiler" ]
+// "scan-build" -> "clang++ compiler"
+// "clang++ frontend" [ label="Clang++ frontend" ]
+// "clang++ frontend" -> "cpp code" [ dir=back ]
+// "clang AST" -> "clang++ frontend" [ dir=back ]
+// "clang++ compiler" -> "clang++ frontend"
+// "clang++ compiler" -> "clang AST"  [ dir=back ]
+// "clang++ compiler" -> "llvm"
+
+// // clang analysis
+// "clang analysis results" [ shape="box" ]
+// "scan-build" -> "clang static analyzer"
+// "clang static analyzer" -> "clang checkers"
+// "clang checkers" -> "clang analysis results"
+// "clang checkers" -> "clang AST" [ dir=back ]
+
+// // clang C code analysis
+// "clang static analyzer" -> "clang frontend"
+
+// // clang C++ code analysis
+// "clang static analyzer" -> "clang++ frontend"
+
+// // callers analysis
+// "metadata json file" [ label="Callers metadata\njson files" ]
+// "metadata json file" [ shape="box", color=green ]
+
+// // callers C code analysis
+// "callers frontend" [ color=green, label="Callers frontend\n(C++)" ]
+// "callers frontend" -> "clang frontend" [ color=green ]
+// "callers frontend" -> "clang AST" [ dir=back, color=green ]
+// "callers frontend" -> "metadata json file" [ color=green ]
+
+// // callers C++ code analysis
+// "callers++ frontend" [ color=green, label="Callers++ frontend\n(C++)" ]
+// "callers++ frontend" -> "clang++ frontend" [ color=green ]
+// "callers++ frontend" -> "clang AST" [ dir=back, color=green ]
+// "callers++ frontend" -> "metadata json file" [ color=green ]
+
+// // callers backends
+// "analysis goals" [ label="analysis goals", shape=box, color=green ]
+// "user config" [ label="user analysis\nbash script", shape=box, color=green ]
+// "analysis goals" -> "user config" [ style=dashed, label=manual, color=green ]
+// "analysis goals" -> "function callgraphs" [ style=dashed, label="manual", dir=back, color=green ]
+// "function callgraphs" [ label="function callgraphs\n.dot files", shape=box, color=green ]
+// "callers backends" [ label="Callers backends\n(OCAML)", color="green" ]
+// "metadata json file" -> "callers backends" [ color=green ]
+// "user config" -> "callers backends" [ color=green ]
+// "callers backends" -> "function callgraphs" [ color=green ]
+
+// // frama-c++
+// "scan-callers" -> "frama-c++" [ color=green ]
+// "frama-c++" [ label="frama-c++", color=blue ]
+// "frama-c++" -> "clang++ frontend" [ color=blue ]
+// "frama-c++" -> "framaCIRGen" [ color=blue ]
+// "frama-c++" -> "frama-clang" [ color=blue ]
+
+// // frama-clang analysis
+// //"scan-callers" -> "frama-clang"
+// "cmake-callers" -> "frama-clang" [ color=green ]
+// "frama-clang" [ label="frama-clang\n(OCAML)", color=blue ]
+// "framaCIRGen" [ label="framaCIRGen\n(C++)", color=blue ]
+// //"fir" [ label="Frama-C Intermediate\nRepresentation", shape=box ]
+// "fir" [ label="Frama-C IR", shape=box, color=blue ]
+// "cabs" [ label = "C Abstract", shape=box, color=blue ]
+// //"cil" [ label = "C Intermediate Language" ]
+// "cil" [ label = "CIL", shape=box ]
+
+// "clang AST" -> "framaCIRGen" [ color=blue ]
+// //"framaCIRGen" -> "fir"
+// "fir" -> "framaCIRGen" [ dir=back, color=blue ]
+// "fir" -> "frama-clang" [ color=blue ]
+// "frama-clang" -> "cabs" [ color=blue ]
+// //"cabs" -> "frama-clang" [ dir=back, color=blue ]
+// "cabs" -> "frama-c" [ color=blue ]
+// //"cabs" -> "frama-c" [ dir=back ]
+
+// // security analysis plugins
+// "scan-callers" -> "fc security plugins" [ color="blue" ]
+// "cmake-callers" -> "fc security plugins" [ color="blue" ]
+// "fc security plugins" [ label="STANCE frama-c\nsecurity plugins", color=blue ]
+// "fc security plugins" -> "VA" [ color=blue ]
+// "fc security plugins" -> "VA results" [ dir=back, color=blue ]
+
+// frama-c value analysis
+"VA results" [ shape=box ]
+"VA" [ label="Value Analysis" ]
+"VA results" [ label="VA results" ]
+"VA" -> "frama-c" [ dir=back ]
+//"VA" -> "VA results"
+"VA results" -> "VA" [ dir=back ]
+"VA" -> "cil" [ dir=back ]
+
+// frama-c analysis
+"c code" [ label="C code", shape="box" ]
+"pp C code" [ shape=box ]
+"frama-c" [ label="frama-c" ]
+"frama-c" -> "c code" [ dir=back ]
+//"c code" -> "frama-c"
+"cil" -> "frama-c"
+"cil" -> "frama-c" [ dir=back ]
+//"frama-c" -> "pretty-printed c code" [ label="print" ]
+"frama-c" -> "pp C code" [ label="print" ]
+//"frama-c" -> "c code" [ label="print" ]
+
+// user analysis goals & config
+"analysis goals" [ label="analysis goals", shape=box ]
+"user config" [ label="user config", shape=box ]
+"analysis goals" -> "user config" [ style=dashed, label=manual ]
+"user config" -> "frama-c"
+"analysis goals" -> "VA results" [ style=dashed, label="manual", dir=back ]
+
+}
+
+// Local Variables:
+// compile-command: "dot -Tpng analysis.frama-c.gen.dot > analysis.frama-c.gen.png"
+// End:
+ 
+   #+END_SRC
+**** preprocess dot files					    :dot2png:
+     #+BEGIN_SRC bash :tangle dot2png.gen.sh
+#!/bin/bash
+for d in `ls *.gen.dot`
+do
+dot -Tpng $d > $d.png
+done
+     #+END_SRC
+**** clean work directory					      :clean:
+     #+BEGIN_SRC bash :tangle clean.gen.sh
+#!/bin/bash
+rm -f *.gen.*
+     #+END_SRC
 *** TODO usage of other plug-ins
 *** TODO special requirements such as libraries or external tools, etc.
    #+BEGIN_SRC org :tangle callers.chap6.tcs.D4.2.2.gen.org
